# notary-public

./: .gitignore  README.md  index.d.ts  index.js  package.json
.github/workflows/: publish.yml
python/: LICENSE  pyproject.toml
python/notary_public/: __init__.py  canonical.py  catalogue.py  cli.py  email.py  gate.py  notarize.py  place.py  receipt.py  sign.py  verify.py
python/tests/: test_cross_language.py  test_gate.py  test_notary.py
rust/: Cargo.toml
rust/src/: canonical.rs  catalogue.rs  email.rs  gate.rs  lib.rs  main.rs  notarize.rs  place.rs  verify.rs
rust/tests/: cross_lang.rs
rust/tests/fixtures/: canonical.expected.txt  receipt.signed.json
server/: README.md  app.js  http.test.js  keys.js  store.js  test.js
server/public/: index.html
spdx/: PROVENANCE.json
spdx/text/: Google-Patent-WebM.txt  deprecated_GPL-1.0+.txt  deprecated_GPL-2.0+.txt  deprecated_LGPL-2.0+.txt  deprecated_LGPL-2.1+.txt
src/: canonical.js  catalogue.js  email.js  gate.js  issuer-public-key.pem  notarize.js  place.js  receipt.js  sign.js  verify.js
test/: gate.test.js  notary.test.js
