[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "notary-public"
version = "0.0.2"
description = "Offline Ed25519 license gate + SPDX license notary (Python sidecar)"
license = { text = "BUSL-1.1" }
requires-python = ">=3.9"
dependencies = ["cryptography>=41"]

[project.scripts]
notary = "notary_public.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["notary_public*"]

[tool.setuptools.package-data]
notary_public = ["issuer-public-key.pem"]
