[package]
name = "notary-public"
version = "0.0.1"
edition = "2021"
description = "The licensing notary: distribute any SPDX license, notarize a project's LICENSE against the canonical text, and gate your own packages with offline signed registration. Rust client SDK + `notary` CLI."
license = "BUSL-1.1"
repository = "https://github.com/public-notary/notary-public"
homepage = "https://github.com/public-notary/notary-public"
keywords = ["license", "spdx", "notary", "attestation", "ed25519"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "notary_public"
path = "src/lib.rs"

[[bin]]
name = "notary"
path = "src/main.rs"

[dependencies]
serde_json = "1"
ed25519-dalek = "2"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
ureq = "2"
